# geocode

./: .replit  .vercelignore  DEV_AGENT_BRIEF.md  SPEC_point-format.md  app.py  package-lock.json  package.json  postcss.config.js  pyproject.toml  replit.md  start_fastapi.py  tailwind.config.ts  tsconfig.json  vite.config.ts
api/: geocode.ts  hello.ts
attached_assets/: Pasted--Goal-When-the-user-clicks-a-map-marker-the-corresponding-record-in-the-lookup-results-list-h-1760986091820_1760986091821.txt  Pasted--Project-Geocode-App-deployed-on-Vercel-GitHub-Replit-workflow-Branch-feature-fix-quirk-1761102593398_1761102593400.txt  Pasted--this-code-uses-the-mt-cadastral-website-to-extract-the-address-it-is-able-to-extract-the-entire-1755557943665_1755557943666.txt  Pasted-Feature-Add-Create-Label-draggable-map-note-from-marker-popup-Goal-Add-a-new-toolbar-button--1760928285860_1760928285864.txt  Pasted-Feature-Batch-format-selected-markers-group-edit-Context-The-app-already-has-a-Select-Group--1760929774051_1760929774051.txt  Pasted-Goal-Allow-users-to-select-and-highlight-multiple-points-records-on-the-map-and-in-the-results-lis-1761009390481_1761009390484.txt  Pasted-Goal-Delete-the-red-X-button-from-the-Group-Selection-toolbar-and-remove-any-behavior-it-triggers-1760979447131_1760979447134.txt  Pasted-Goal-When-the-user-clicks-Select-Group-immediately-enter-polygon-draw-mode-Leaflet-draw-so-the-1761013231043_1761013231043.txt  Pasted-Goal-When-the-user-completes-a-polygon-group-selection-the-app-should-leave-drawing-mode-immedia-1761014458859_1761014458860.txt  (+4 more)
(+35 files in other folders)
