[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastapi>=0.116.1",
    "lxml>=6.0.0",
    "playwright>=1.54.0",
    "requests>=2.32.5",
    "uvicorn[standard]>=0.35.0",
]
